--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bcryptjs": "^3.0.3",
     "cookies-next": "^6.1.1",
     "dotenv": "^17.2.3",
-    "jsonwebtoken": "^9.0.3",
+    "jose": "^6.1.3",
     "next": "16.1.1",
     "prisma": "^6.19.1",
     "react": "19.2.3",
@@ -26,7 +26,6 @@
     "@faker-js/faker": "^10.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
