--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
     "prisma": "6.19.1",
+    "puppeteer": "^24.35.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "swagger-jsdoc": "^6.2.8",
