--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@prisma/client": "^6.19.1",
     "@supabase/supabase-js": "^2.90.1",
     "@types/nodemailer": "^7.0.5",
+    "@upstash/redis": "^1.36.1",
+    "ably": "^2.17.0",
     "bcryptjs": "^3.0.3",
     "cookies-next": "^6.1.1",
     "docx": "^9.5.1",
     "dotenv": "^17.2.3",
     "https": "^1.0.0",
+    "ioredis": "^5.9.2",
     "jose": "^6.1.3",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
