--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "https": "^1.0.0",
     "ioredis": "^5.9.2",
     "jose": "^6.1.3",
-    "next": "16.1.1",
+    "next": "^15.1.0",
     "next-auth": "^4.24.13",
     "nodemailer": "^7.0.12",
     "pdfkit": "^0.17.2",
@@ -60,7 +60,7 @@
     "@types/swagger-ui-react": "^5.18.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "eslint-config-next": "^15.1.0",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
